<?xml version="1.0" encoding="utf-8"?>

    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="12dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp">

        <LinearLayout
            android:id="@+id/linear_layout_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/ripple"
            android:orientation="vertical"
            android:padding="16dp"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:id="@+id/name_flag"
                android:layout_width="57dp"
                android:layout_height="44dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/poland_flag_description"
                android:src="@drawable/polandflag" />

            <TextView
                android:id="@+id/new_confirmed_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="7dp"
                android:text="@string/new_confirmed_string"
                android:textColor="@color/textColor"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/confirmed_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="7dp"
                android:text="@string/confirmed_string"
                android:textColor="@color/textColor"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/new_deaths_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="7dp"
                android:text="@string/new_deaths_string"
                android:textColor="@color/textColor"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/deaths_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="7dp"
                android:text="@string/deaths_string"
                android:textColor="@color/textColor"
                android:textSize="12sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/new_recovered_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="7dp"
                android:text="@string/new_recovered_string"
                android:textColor="@color/textColor"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/recovered_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="7dp"
                android:text="@string/recovered_string"
                android:textColor="@color/textColor"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/update_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="7dp"
                android:text="@string/lasted_updated_string"
                android:textColor="@color/textColor"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

