<?xml version="1.0" encoding="utf-8"?>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ctr_bg"
        tools:context=".MainActivity">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:fitsSystemWindows="true"
            android:theme="@style/AppTheme">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
                app:title="COVID-19">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="false"
                    android:layout_gravity="center|end"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    app:srcCompat="@drawable/top_background"
                    android:contentDescription="@string/content_description_man" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin" >



                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAlignBottom="false"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_add"
        app:fabSize="normal"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="end|bottom"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#facf5a"
        android:contentDescription="@string/content_description_icon_add" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/layout_bg"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context=".MainActivity">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="46dp">

                    <TextView
                        android:id="@+id/todayDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="10dp"

                        android:text="@string/todayDate_string"
                        android:textColor="#90FFFFFF"
                        android:textSize="14sp"
                        android:textStyle="italic" />
                </RelativeLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/relativeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="visible">

                    <ImageView
                        android:id="@+id/name_flag"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:contentDescription="@string/content_description_flag" />

                    <TextView
                        android:id="@+id/country_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/country_string"
                        android:textColor="@color/textColor"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/name_flag" />

                    <!--NO INTERNET CONNECTION-->

                    <ImageView
                        android:id="@+id/grave_picture"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/gravenet"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/no_internet_heading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="No Internet Connection"
                        android:textAllCaps="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/grave_picture"
                        android:visibility="gone"/>

                    <TextView
                        android:id="@+id/no_internet_text"
                        android:layout_width="251dp"
                        android:layout_height="49dp"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:text="Check your Internet Connection and Try Again"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="#919191"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/no_internet_heading"
                        android:visibility="gone"/>

                    <Button
                        android:id="@+id/try_again_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:paddingHorizontal="32dp"
                        android:text="Try Again"
                        android:textAllCaps="false"
                        android:textColor="@color/cardview_dark_background"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/no_internet_text"
                        android:visibility="gone"/>
                        <!-- /\/\/\/\/\/\/\/\/\/\/\/\/\/\ -->
                        <!--  END NO INTERNET CONNECTION -->

                    <TextView
                        android:id="@+id/new_confirmed_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:text="@string/new_confirmed_string"
                        android:textColor="@color/textColor"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/country_name"
                        android:visibility="invisible"/>

                    <TextView
                        android:id="@+id/confirmed_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/confirmed_string"
                        android:textColor="@color/textColor"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/new_confirmed_name"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/new_deaths_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/new_deaths_string"
                        android:textColor="@color/textColor"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/confirmed_name"
                        android:visibility="invisible"/>

                    <TextView
                        android:id="@+id/deaths_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/deaths_string"
                        android:textColor="@color/textColor"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/new_deaths_name"
                        android:visibility="invisible"/>

                    <TextView
                        android:id="@+id/new_recovered_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/new_recovered_string"
                        android:textColor="@color/textColor"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/deaths_name"
                        android:visibility="invisible"/>

                    <TextView
                        android:id="@+id/recovered_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/recovered_string"
                        android:textColor="@color/textColor"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/new_recovered_name"
                        android:visibility="invisible"/>

                    <TextView
                        android:id="@+id/update_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/lasted_updated_string"
                        android:textColor="@color/textColor"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/recovered_name"
                        android:visibility="invisible"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>